trocado de esgotado para Não tem

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <td>Azul</td>
             <td>P</td>
             <td>R$ 160,00</td>
-            <td>Esgotado</td>
+            <td>Não tem</td>
         </tr>
 
         <table> - Aqui seria a tag pai para o funcionamento da tabela
