Trocado a calça azul pela cinza

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,21 +26,11 @@
         </tr>
         <tr>
             <td>Calça Jeans</td>
-            <td>Azul</td>
+            <td>Cinza</td>
             <td>P</td>
             <td>R$ 160,00</td>
             <td>Não tem</td>
         </tr>
-
-        <table> - Aqui seria a tag pai para o funcionamento da tabela
-            <tr> - Aqui seria a tag filho, abertura da tabela
-            <th>OI coluna</th> - Aqui seria a definição da coluna
-            </tr> 
-            <tr>
-            <td>OI Linha</td> - Aqui seria a definição da linha da coluna
-            </tr>
-            </table>
-    </table>
 
 </body>
 </html>
